--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 .idea
+.vscode
 node_modules
 jspm_packages
 npm-debug.log
 debug.log
 src/**/*.js
+src/**/*.js.map
 !src/systemjs.config.extras.js
 !src/systemjs.config.js
-*.js.map
 e2e/**/*.js
 e2e/**/*.js.map
 _test-output
